[gd_scene load_steps=9 format=3 uid="uid://cu5i86crrtoo8"]

[ext_resource type="Script" path="res://scripts/lobby.gd" id="1_vibkn"]
[ext_resource type="Texture2D" uid="uid://b42sdsfqgbcfv" path="res://images/hourglass.png" id="3_5ld74"]
[ext_resource type="Texture2D" uid="uid://buxpydmjg0bxj" path="res://images/check-mark.png" id="4_elf82"]
[ext_resource type="Texture2D" uid="uid://bjwojdenkwodm" path="res://images/black-user.png" id="5_m5n68"]
[ext_resource type="Texture2D" uid="uid://cgbiyb5eqkuot" path="res://images/black-knight.png" id="6_o6nbs"]
[ext_resource type="Texture2D" uid="uid://mc7jsmfotpkc" path="res://images/white-user.png" id="7_ep1is"]
[ext_resource type="Texture2D" uid="uid://tm3k4cnro0fc" path="res://images/white-knight.png" id="8_6gm50"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nlxs2"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 1.0
offset_right = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vibkn")

[node name="YourNameInput" type="TextEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -344.0
offset_top = -43.0
offset_right = 344.0
offset_bottom = 4.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -339.0
offset_top = -110.0
offset_right = -27.0
offset_bottom = -54.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "your name"
vertical_alignment = 1

[node name="FindMatchButton" type="Button" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -345.0
offset_top = 34.0
offset_right = 341.0
offset_bottom = 86.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 24
text = "Find match"

[node name="ConfirmPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_nlxs2")

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -150.0
offset_right = 400.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 100
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmPanel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="BlackClockImage" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_5ld74")
expand_mode = 1
stretch_mode = 5

[node name="BlackConfirmImage" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
texture = ExtResource("4_elf82")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("5_m5n68")
expand_mode = 5
stretch_mode = 5

[node name="BlackPlayerLabel" type="Label" parent="ConfirmPanel/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("6_o6nbs")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="ConfirmPanel/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "vs
"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="VBoxContainer2" type="VBoxContainer" parent="ConfirmPanel/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="WhiteClockImage" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
texture = ExtResource("3_5ld74")
expand_mode = 1
stretch_mode = 5

[node name="WhiteConfirmImage" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(50, 30)
layout_mode = 2
texture = ExtResource("4_elf82")
expand_mode = 1
stretch_mode = 5

[node name="TextureRect3" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture = ExtResource("7_ep1is")
expand_mode = 5
stretch_mode = 5

[node name="WhitePlayerLabel" type="Label" parent="ConfirmPanel/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureRect4" type="TextureRect" parent="ConfirmPanel/HBoxContainer/VBoxContainer2"]
custom_minimum_size = Vector2(60, 60)
layout_mode = 2
texture = ExtResource("8_6gm50")
expand_mode = 1
stretch_mode = 5
flip_h = true

[node name="AcceptMatching" type="Button" parent="ConfirmPanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -189.0
offset_right = 30.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 30
text = "Accept"

[node name="Label" type="Label" parent="ConfirmPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_top = 365.0
offset_right = 20.0
offset_bottom = 391.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "30"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="FindMatchButton" to="." method="OnWebSocketSendMessage"]
[connection signal="pressed" from="ConfirmPanel/AcceptMatching" to="." method="OnWebSocketSendMessageAcceptMatching"]
